--- a/views/approval.ejs
+++ b/views/approval.ejs
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>        
-
-    <% include ./partials/head %>
+    <head>
+        <% include ./partials/head %>
 
         <!--     leaflet css -->
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
@@ -28,7 +27,6 @@
         <% include ./partials/navbar %>
 
         <div class="section">
-
 
             <div class="map-wrapper">
                 <div class="map" id="map" style="width:100%;"></div> 
@@ -120,7 +118,7 @@
                 }
 
             </script>
-            
+
 
             <!-- Upload panel -->
             <div style="display: none;" class="panel1--upload">
@@ -138,52 +136,10 @@
                     </div>           
                 </div>
 
-
-                <div class="info-panel__image--upload__holder">
-                    <div class="form-background">
-
-                        <span>Add Details</span>
-
-                        <form id="uploadForm" name="myForm" action="/upload" method="POST" onsubmit="return validateForm()">
-
-                            <input id="latTextBox" input type="hidden" type="text" name="lat" value="">
-                            <input id="lngTextBox" input type="hidden" type="text" name="lng" value="">
-                            <input id="tagsArrayHidden" input type="hidden" type="text" name="tags" value="">
-                            <input id="markerArrayHidden" input type="hidden" type="text" name="markerImageArray" value="">
-                            <span id = "status"></span>
-
-
-                            <div class="form-input-container">
-                                <input class="form-input" type="text" name="name" placeholder="Post Title" required>
-                                <img class="form-icon" src="/icons/keyboard-24px.svg">
-                            </div>
-
-                            <div class="form-input-container form-input-container--half">
-                                <input class="form-input form-input--date" type="text" name="date" placeholder="Date">
-                                <img class="form-icon" src="/icons/calendar_today-24px.svg">
-                            </div>
-
-                            <div class="form-input-container form-input-container--half">
-                                <input id="myInput" class="form-input form-input--date" type="text" name="tagInput" placeholder="Add Tags">                                
-                                <img class="form-icon" src="/icons/local_offer-24px.svg">
-                                <span onclick="newTag()" id="addTagBtn" class="form-tag-button">Add</span>
-                            </div>
-
-                            <ul id="myUL" class="ulTag"></ul>
-
-                            <button type="button" id="upload_widget" class="cloud-button">Upload Photos</button>
-
-                            <input class="form-submit" type="submit" value="SUBMIT POST">
-
-                        </form> 
-                    </div>
-                </div>
             </div>
 
         </div>
 
-        <!--        cloudinary for image uploads-->
-        <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>  
 
         <script type="text/javascript"> 
             // need to clear this for each new upload or reset
@@ -459,22 +415,6 @@
                     displayPanel[0].style.display = "none";
                 }
 
-                // Change button text when clicked on
-                var textInButton = document.getElementsByClassName("map-button-square")[0].innerHTML;
-                var AddPhotoButton = document.getElementsByClassName("map-button-square")[0];
-                var buttonIcon = document.getElementById("camera-button");
-
-                if(textInButton == "Add Photo") {
-                    buttonIcon.src = "/icons/close.png"
-                    buttonIcon.style.width = "40px"
-                    AddPhotoButton.innerHTML = "Cancel";
-                    AddPhotoButton.style.paddingLeft = '30px';                    
-                } else {
-                    buttonIcon.src = "/icons/photo-camera.png"
-                    buttonIcon.style.width = "40px"
-                    AddPhotoButton.innerHTML = "Add Photo";
-                    AddPhotoButton.style.paddingLeft = '15px';
-                }
             }
 
             // desktop and mobile panel changes
@@ -501,140 +441,11 @@
             }
             windowResize();
 
+            
 
+            
 
-
-
-            // adds an overlay to the info-panel-upload and removes it when the user has selected a location
-            function overlayOff() { 
-                // turns the overlay off once the map is clicked on - this insertes the coords into the  hidden textbox
-                //  if (docment.getElementById("latTextBox").length != 0) {
-                document.getElementById("overlay").style.display = "none";
-                //                }
-            }
-
-            // check image uploaded is an image
-            function checkURL(url) {
-                return(url.match(/\.(jpeg|jpg|gif|png)$/) != null);
-            }
-
-            //            // check the image form has an image from somewere
-            //            function validateForm() {
-            //                var url = document.forms["myForm"]["pasteurl"].value;
-            //                var imageUpload = document.forms["myForm"]["keyphoto"].value;  
-            //
-            //                if(imageUpload) {                    
-            //                    return true;
-            //                }                 
-            //
-            //                if (!checkURL(url)) {
-            //                    alert("Image must be jpg or png");
-            //                    return false;
-            //                }
-            //            }
-
-
-            // add the overlay to delete tag
-            var myNodelist = document.getElementsByClassName("aTag");
-            var i;
-            for (i = 0; i < myNodelist.length; i++) {
-                var span = document.createElement("SPAN");
-                var txt = document.createTextNode("\u00D7");
-                span.className = "closeTag";
-                txt.className = "close-txt";
-                span.appendChild(txt);
-                myNodelist[i].appendChild(span);
-            }
-
-
-            var data = []
-            // Click on a tag to remove it
-            var closeTag = document.getElementsByClassName("closeTag");
-            var i;
-
-            var actualTagCount  = 0;
-
-            // Create a new tag when clicking on the "Add" button            
-            function newTag() {
-                var li = document.createElement("li");
-                var input = document.getElementById("myInput");
-                var inputValue = document.getElementById("myInput").value;
-                var t = document.createTextNode(inputValue);
-                li.appendChild(t);  
-
-                if (inputValue === '') {
-                    alert("You must write something!");
-                } else {                     
-                    document.getElementById("myUL").appendChild(li);
-                    console.log("Input Val", inputValue);
-                    data.push(inputValue);  
-
-                    document.getElementById('tagsArrayHidden').value = data;
-
-                    var tagCount = document.getElementById("myUL").childElementCount;                     
-                    actualTagCount = actualTagCount + 1;                   
-
-                    // increase space in form to fit tags
-                    if (actualTagCount >= 1) {
-                        document.getElementById("myUL").style.height = "70px";
-                    }
-                    if (actualTagCount >= 5) {
-                        document.getElementById("myUL").style.height = "130px";
-                    }
-                }
-
-                document.getElementById("myInput").value = "";
-
-                var span = document.createElement("SPAN");
-                var txt = document.createTextNode("\u00D7");
-                span.className = "closeTag";
-                span.appendChild(txt);
-                li.appendChild(span);
-
-                // remove tag if clicked on
-                for (i = 0; i < closeTag.length; i++) {
-                    closeTag[i].onclick = function() {
-                        var div = this.parentElement;
-                        // remove x from end of text
-                        var str= div.textContent;
-                        var searchTerm = str.substring(0, str.length - 1);
-
-                        // remove tag from array
-                        var index = data.indexOf(searchTerm);                        
-                        if (index > -1) {
-                            data.splice(index, 1);
-                        }
-
-                        //update array in textbox sent to database
-                        document.getElementById('tagsArrayHidden').value = data 
-
-                        div.style.display = "none";
-
-
-                        actualTagCount = actualTagCount - 1;
-
-                        // decrease space in form to fit tags
-                        if (actualTagCount < 5) {
-                            document.getElementById("myUL").style.height = "70px";
-                        } 
-                        if (actualTagCount == 0) {
-                            document.getElementById("myUL").style.height = "0px";
-                        }
-                    }
-                }
-            }
-
-            // click button on pressing enter to add new tag
-            var input = document.getElementById("myInput");
-            var inputValue = input.value;
-
-            input.addEventListener("keyup", function(event) {
-                if (event.keyCode === 13) {  	
-                    event.preventDefault();                       
-                    document.getElementById("addTagBtn").click();
-                }
-            });
-
+            
             // disable submit on the filter box on the map
             filterForm.onsubmit = function()
             { 
@@ -674,7 +485,32 @@
                             id: document.getElementById("markerId").innerHTML   
                         },
                         success: function(result) {
-                            alert('ok');
+                            alert('Approved');
+                        },
+                        error: function(result) {
+                            console.log("error");
+                        }
+                    });
+                });
+            });
+
+
+            $(function() {
+                $('button.rejectButton').click(function() {
+
+                    console.log("this.dataset.id", this.dataset.id);
+                    console.log("this.dataset", this.dataset);
+                    console.log("$(this).data('id')", $(this).data('id'));                    
+
+                    $.ajax({
+                        type: "POST",
+                        url: "/reject",
+                        data: { 
+                            // sent to server
+                            id: document.getElementById("markerId").innerHTML   
+                        },
+                        success: function(result) {
+                            alert('Rejected');
                         },
                         error: function(result) {
                             console.log("error");
