--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,17 +8,37 @@
 
         <div class="home-page-container">
 
-            <div class="landing-page-fold">
-                <p class="landing-page-fold__main-text"> See the locations of great images around the world </p>
 
-                <div class="landing-page-fold__main-image"><img src="/home-background/background-gradient.png"></div>
+            <div class="homepageHeader"> 
+                <div class="homepageHeader__imageContainer">
+                    <div class="homepageHeader__img1">
+                    </div>
+                    <div class="homepageHeader__img2">
+                    </div>
+                    <div class="homepageHeader__img3">
+                    </div>
+                    <div class="homepageHeader__img4">
+                    </div>
+                    <div class="homepageHeader__img5">
+                    </div>
+                    <div class="homepageHeader__img6">
+                    </div>
+                    <div class="homepageHeader__img7">
+                    </div>
+                    <div class="homepageHeader__img8">
+                    </div>
+                    <div class="homepageHeader__img9">
+                    </div>
+                </div>
 
-                <div class="landing-page-fold__main-image2"><img src="/home-background/person.png"></div>
-
-                <div class="landing-page-fold__main-image3"><img src="/home-background/world.png"></div>
-
-
+                <div class="homepageHeader__textContainer">
+                    <div class="homepageHeader__text">
+                        <p>See famous photo locations around the world</p>
+                        <a href="worldLandmarks"><button class="homepageHeader__button">Go to map</button></a>
+                    </div>
+                </div>
             </div>
+
 
             <div class="home-maps">
                 <div class="home-maps__title">Maps</div>
@@ -26,17 +46,9 @@
                 <div class="home-maps-flex-container">
                     <div class="flex-container__box">
                         <p>World Landmarks</p>
-                        <a href="worldLandmarks"><button onclick="blackpink" class="map-link__button button-primary">Go</button></a>
+                        <a href="worldLandmarks"><button class="map-link__button button-primary">Go</button></a>
+                    </div>
 
-                    </div>
-                    <div class="flex-container__box">
-                        <p>Top Beaches</p>
-                        <a href="worldLandmarks"><button onclick="" class="map-link__button button-primary">Go</button></a>
-                    </div>
-                    <div class="flex-container__box">
-                        <p>Other</p>
-                        <a href="worldLandmarks"><button onclick="" class="map-link__button button-primary">Go</button></a>
-                    </div>
                 </div>
 
             </div>
