--- a/views/worldLandmarks.ejs
+++ b/views/worldLandmarks.ejs
@@ -3,30 +3,12 @@
     <head>        
         <!--        head -->
         <% include ./partials/head %>
-
-        <!--     leaflet css -->
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
-              integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-              crossorigin=""/>
-        <!--     leaflet js -->
-        <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
-                integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
-                crossorigin=""></script>
-
-        <!--    Leaflet.markercluster -->
-        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css"/>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css"/>
-        <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+        <% include ./partials/leaflet %>
 
         <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
         <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
 
-
-        <link  rel="stylesheet"
-              href="https://bootswatch.com/4/journal/bootstrap.min.css"
-              />
-
-
+        <link  rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css"/>
     </head>
 
     <body onresize="windowResize()">
@@ -815,7 +797,6 @@
             };
 
         </script>        
-
     </body>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
