Refactored user routes

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,7 +13,7 @@
             </div>
         </div>
 
-        <a class="nav-bar__title login" href="/welcome">Log In/Sign Up</a>        
+        <a class="nav-bar__title login" href="/user/welcome">Log In/Sign Up</a>        
         <a href="/dashboard" class="nav-bar__title user">User Page</a>
         <a href="/approval" class="nav-bar__title admin">Approval</a>
         <a href="/logout" class="nav-bar__title user">Logout</a>
