--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
         <div class="card card-body">
             <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
             <% include ./partials/messages %>
-            <form action="/login" method="POST">
+            <form action="/user/login" method="POST">
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input
@@ -44,7 +44,7 @@
                 <button type="submit" class="button-blue-ow btn-block">Login</button>
             </form>
             <p class="lead mt-4">
-                No Account? <a href="/register" class="text-colour-ow">Register</a>
+                No Account? <a href="/user/register" class="text-colour-ow">Register</a>
             </p>
         </div>
     </div>
