--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,7 +22,7 @@
                 <i class="fas fa-user-plus"></i> Register
             </h1>
             <% include ./partials/messages %>
-            <form action="/register" method="POST">
+            <form action="/user/register" method="POST">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input
@@ -71,7 +71,7 @@
                     Register
                 </button>
             </form>
-            <p class="lead mt-4 ">Have An Account? <a href="/login" class="text-colour-ow">Login</a></p>
+            <p class="lead mt-4 ">Have An Account? <a href="/user/login" class="text-colour-ow">Login</a></p>
         </div>
     </div>
 </div>
