--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -17,8 +17,8 @@
         <div class="card card-body text-center">
             <h1><i class=""></i><img src="/icons/InYourArea%2048%20fav.png"></h1>
             <p>Create an account or login</p>
-            <a href="/register" class="button-blue-ow btn-block">Register</a>
-            <a href="/login" class="btn btn-secondary btn-block mb-2">Login</a>
+            <a href="/user/register" class="button-blue-ow btn-block">Register</a>
+            <a href="/user/login" class="btn btn-secondary btn-block mb-2">Login</a>
             <a href="/" class="btn btn-secondary btn-block">Home</a>
                     
         </div>
