--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,14 +9,14 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="worldLandmarks">World Landmarks</a>
+                <a href="/worldLandmarks">World Landmarks</a>
             </div>
         </div>
 
         <a class="nav-bar__title login" href="/user/welcome">Log In/Sign Up</a>        
-        <a href="/dashboard" class="nav-bar__title user">User Page</a>
-        <a href="/approval" class="nav-bar__title admin">Approval</a>
-        <a href="/logout" class="nav-bar__title user">Logout</a>
+        <a href="/user/dashboard" class="nav-bar__title user">User Page</a>
+        <a href="/approval/approval" class="nav-bar__title admin">Approval</a>
+        <a href="/user/logout" class="nav-bar__title user">Logout</a>
 
 
     </div>
