Heroku config update for database

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -3497,7 +3497,7 @@ body {
     height: 100%;
     background-size: cover; /* <-- background size */
     background-position: center; /* <-- background position */
-    background-image: url(images/171121153705-02-empire-state-building-restricted-super-169-min.jpg);
+    background-image: url();
 }
 
 .homepageHeader__img2 {
@@ -3506,7 +3506,7 @@ body {
     height: 100%;
     background-size: cover; /* <-- background size */
     background-position: center; /* <-- background position */
-    background-image: url(images/190709-niagara-falls-min.jpg);
+    background-image: url());
 }
 
 .homepageHeader__img3 {
@@ -3515,7 +3515,7 @@ body {
     height: 100%;
     background-size: cover; /* <-- background size */
     background-position: center; /* <-- background position */
-    background-image: url(images/steven-roe-bxUylPipWmM-unsplash-min.jpg);
+    background-image: url();
 }
 
 .homepageHeader__img4 {
@@ -3524,7 +3524,7 @@ body {
     height: 100%;
     background-size: cover; /* <-- background size */
     background-position: center; /* <-- background position */
-    background-image: url(images/cait-ellis-Erld-XTqXv0-unsplash-min.jpg);
+    background-image: url();
 }
 
 .homepageHeader__img5 {
@@ -3533,7 +3533,7 @@ body {
     height: 100%;
     background-size: cover; /* <-- background size */
     background-position: center; /* <-- background position */
-    background-image: url(images/luca-bravo-TaCk3NspYe0-unsplash-min.jpg);
+    background-image: url();
 }
 
 .homepageHeader__img6 {
@@ -3542,7 +3542,7 @@ body {
     height: 100%;
     background-size: cover; /* <-- background size */
     background-position: center; /* <-- background position */
-    background-image: url(images/mathew-schwartz-gsllxmVO4HQ-unsplash-min.jpg);
+    background-image: url();
 }
 
 .homepageHeader__img7 {
@@ -3551,7 +3551,7 @@ body {
     height: 100%;
     background-size: cover; /* <-- background size */
     background-position: center; /* <-- background position */
-    background-image: url(images/max-bender-FuxYvi-hcWQ-unsplash-min.jpg);
+    background-image: url();
 }
 
 .homepageHeader__img8 {
@@ -3560,7 +3560,7 @@ body {
     height: 100%;
     background-size: cover; /* <-- background size */
     background-position: center; /* <-- background position */
-    background-image: url(images/picto_myGoogleBusiness_1-min.jpg);
+    background-image: url();
 }
 
 .homepageHeader__img9 {
@@ -3569,7 +3569,7 @@ body {
     height: 100%;
     background-size: cover; /* <-- background size */
     background-position: center; /* <-- background position */
-    background-image: url(images/robin-noguier-sydwCr54rf0-unsplash-min.jpg);
+    background-image: url();
 }
 
 .homepageHeader {
