Moving some files

--- a/views/worldLandmarks.ejs
+++ b/views/worldLandmarks.ejs
@@ -565,7 +565,7 @@
                 }
 
                 <% } else {%>
-                window.location.href = "/welcome";
+                window.location.href = "/user/welcome";
                 console.log("no user")
                 <% } %>
 
