Refactored user routes to controller

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,12 +13,11 @@
             </div>
         </div>
 
-        <a class="nav-bar__title login" href="/user/welcome">Log In/Sign Up</a>        
-        <a href="/user/dashboard" class="nav-bar__title user">User Page</a>
+        <a class="nav-bar__title login" href="/user/loginOrRegister">Log In/Sign Up</a>        
+        <a href="/user/mySubmissions" class="nav-bar__title user">User Page</a>
         <a href="/approval/approval" class="nav-bar__title admin">Approval</a>
         <a href="/user/logout" class="nav-bar__title user">Logout</a>
-
-
+        
     </div>
 </div>
 
