--- a/views/worldLandmarks.ejs
+++ b/views/worldLandmarks.ejs
@@ -564,7 +564,7 @@
                 }
 
                 <% } else {%>
-                window.location.href = "/user/welcome";
+                window.location.href = "/user/loginOrRegister";
                 console.log("no user")
                 <% } %>
 
