--- a/views/approval.ejs
+++ b/views/approval.ejs
@@ -2,24 +2,7 @@
 <html>
     <head>
         <% include ./partials/head %>
-
-        <!--     leaflet css -->
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
-              integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-              crossorigin=""/>
-        <!--     leaflet js -->
-        <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
-                integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
-                crossorigin=""></script>
-
-        <!--    Leaflet.markercluster -->
-        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css"/>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css"/>
-        <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
-
-        <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
-        <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
-
+        <% include ./partials/leaflet %>
     </head>
 
     <body onresize="windowResize()">
@@ -87,46 +70,10 @@
             </div>
 
 
-            <script>
-
-                var panel = document.getElementsByClassName("panel1")[0];
-                var iconOut = document.getElementsByClassName("icon-out1")[0];
-                var OpenCloseIcon = document.getElementById("toggle1");
-
-
-                iconOut.onclick = function(){
-                    if (panel.style.height == "80%") {
-                        console.log("a");
-                        panel.style.height = "20%";
-                        iconOut.style.top = "calc(80% - 25px)";
-
-                        OpenCloseIcon.classList.add("is-up");
-                        OpenCloseIcon.classList.remove("is-down");
-
-                    } else {
-                        console.log("b");
-                        panel.style.height = "80%";
-                        iconOut.style.top = "calc(20% - 25px)";
-
-                        OpenCloseIcon.classList.remove("is-up");
-                        OpenCloseIcon.classList.add("is-down");
-                    }
-                };
-
-                document.getElementById("toggle1").onclick = function(){
-
-                }
-
-            </script>
-
-
             <!-- Upload panel -->
             <div style="display: none;" class="panel1--upload">
-
-                <!--          TODO      HIDDING OVERLAY FOR DEVELOPMENT -- REMOVE DISPLAY NONE WHEN DONE-->
                 <div style="display: none;" id="overlay" class="info-panel--upload__overlay">
                     <div class="info-panel--upload__overlay__text">
-
 
                         <div class="info-panel--upload__overlay__text2">Select location on map
                         </div>
@@ -135,148 +82,37 @@
 
                     </div>           
                 </div>
-
             </div>
 
         </div>
 
-
-        <script type="text/javascript"> 
-            // need to clear this for each new upload or reset
-            // stores the urls or the uploaded images so they can be saved to the db
-            var arrayOfImageUrls = [];
-
-            var myWidget = cloudinary.createUploadWidget({
-                cloudName: 'dqyaxjtvh', 
-                uploadPreset: 'mxgy7sn1'}, (error, result) => { 
-                if (!error && result && result.event === "success") { 
-                    console.log('Done! Here is the image info: ', result.info, result.info.url);
-
-                    arrayOfImageUrls.push(result.info.url);            
-                    document.getElementById("markerArrayHidden").value = arrayOfImageUrls;      
-
-                    //console.log(arrayOfImageUrls); 
-                    //console.log(typeof arrayOfImageUrls);
-                }
-            })
-
-            document.getElementById("upload_widget").addEventListener("click", function(){
-                myWidget.open();
-            }, false);
-        </script>
-
-
         <script>
-            var windowHeightSwitchPanelSize = 940;
-            var windowHeight = window.innerHeight;
-
-            // Image gallery - click on image to view large
-            function displayImage(imgs) {
-                var expandImg = document.getElementById("expandedImg");
-                expandImg.src = imgs.src;
-
-            }
-
-            var markerClusterer;
-            var markerArray = [];
-            var mapLocationThing;
-
-            // map creation
-            var map = L.map('map').setView([43.511680603027344, -5.767113304138184
-                                           ], 2);
-
-            // set map tile layer
-            L.tileLayer('https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}', {
-                attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, <a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-                maxZoom: 18,
-                minZoom: 2,
-                style: "mapbox://styles/mapbox/satellite-streets-v10",
-                id: 'mapbox.satellite',
-                accessToken: 'pk.eyJ1IjoibWFydGluYnJvd24iLCJhIjoiY2szbHQwNWR3MG55MTNsbm04NW8ydXhiMSJ9.N_XvtrtfLeO9t6MEoy0Xqg'
-            }).addTo(map);
 
 
-            // set map bounds
-            var bounds = L.latLngBounds([[-110, -180], [200, 200]]);
-
-            map.setMaxBounds(bounds);
-            map.on('drag', function() {
-                map.panInsideBounds(bounds, { animate: false });
-            });
-
-            var theMarker = {};
-            function addMarkerNew(e) {
-
-                // https://github.com/pointhi/leaflet-color-markers
-                var greenIcon = new L.Icon({
-                    iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png',
-                    shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
-                    iconSize: [25, 41],
-                    iconAnchor: [12, 41],
-                    popupAnchor: [1, -34],
-                    shadowSize: [41, 41]
-                });
-
-                map.on('click', function(e) {
-                    lat = e.latlng.lat;
-                    lng = e.latlng.lng;
-
-                    overlayOff();
-
-                    console.log("You clicked the map at LAT: " + lat + " and LONG: " + lng);
-
-                    //Clear existing marker, 
-                    if (theMarker != undefined) {
-                        map.removeLayer(theMarker);
-                    };
-
-                    //Add a marker to show where you clicked.                
-                    theMarker = L.marker([lat, lng], {
-                        draggable: 'true',
-                        icon: greenIcon
-                    }).addTo(map);
-
-                    document.getElementById("latTextBox").value = lat;
-                    document.getElementById("lngTextBox").value = lng;
-
-                    theMarker.on('dragend', function(event) {
-                        var position = theMarker.getLatLng();
-                        console.log(position)
-
-                        theMarker.setLatLng(position, {
-                            draggable: 'true'
-                        }).bindPopup(position).update();
-
-                        document.getElementById("latTextBox").value = position.lat;
-                        document.getElementById("lngTextBox").value = position.lng;
-
-                        console.log("Log of value", document.getElementById("lngTextBox").value)
-                    });
-                });
-            }
+            <% include ./js/imageGallery %>
+            <% include ./js/map %>
+            <% include ./js/openCloseIcon %>
 
             // Create Markers array GeoJson
             var markerArrayGEOFromDB = [];
-            var markerArray = [];
 
             // Create Markers array GeoJson
             var loadDBvaluesIntoJsonDoc = function() {
 
+                <% points.forEach((event)=>{ %>
 
-                        <% points.forEach((event)=>{ %>
+                var actId = '<%=event.id%>';
+                var lng = <%=event.location.coordinates[0]%>;
+                var lat = <%=event.location.coordinates[1]%>;
+                var name = '<%=event.name%>';
+                var image;
+                var date = '<%=event.date%>'; 
 
-                            var actId = '<%=event.id%>';
-                            var lng = <%=event.location.coordinates[0]%>;
-                            var lat = <%=event.location.coordinates[1]%>;
-                            var name = '<%=event.name%>';
-                            var image;
-                            var date = '<%=event.date%>'; 
+                var markerImageArray = [];
+                var tags = [];
 
-                            var markerImageArray = [];
-                            var tags = [];
-
-                            var tags = JSON.parse('<%- JSON.stringify(event.tags) %>');
-                            console.log("tags")
+                var tags = JSON.parse('<%- JSON.stringify(event.tags) %>');
+                                      console.log("tags")
 
                 var markerImageArray = JSON.parse('<%- JSON.stringify(event.markerImageArray) %>');
                                                   // breaks if this is removed, todo with that above > '); thing
@@ -440,29 +276,7 @@
             }
             windowResize();
 
-
-
-
-
-
-            // disable submit on the filter box on the map
-            filterForm.onsubmit = function()
-            { 
-                //do what you want;
-                return false;
-            }
-
-            // gallery left and right buttons
-            const buttonLeft = document.getElementById('slideLeft');
-            const buttonRight = document.getElementById('slideRight');
-
-            buttonLeft.onclick = function () {
-                document.getElementsByClassName('image-holder')[0].scrollLeft += 100;
-            };
-
-            buttonRight.onclick = function () {
-                document.getElementsByClassName('image-holder')[0].scrollLeft -= 100;
-            };
+            <% include ./js/galleryButtons %> 
         </script>    
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -519,8 +333,8 @@
                 });
             });
 
-
         </script>
+
 
 
     </body>
