--- a/views/worldLandmarks.ejs
+++ b/views/worldLandmarks.ejs
@@ -8,7 +8,7 @@
         <link  rel="stylesheet" href="https://bootswatch.com/4/journal/bootstrap.min.css"/>
     </head>
 
-    <body onresize="windowResize()">
+    <body class="body" onresize="windowResize()">
 
         <% include ./partials/navbar %>
         <% include ./partials/messages %>
